Update config and manage conflict